updated and added comments

--- a/mini_insta/templates/mini_insta/create_post_form.html
+++ b/mini_insta/templates/mini_insta/create_post_form.html
@@ -1,5 +1,5 @@
 <!-- 
-File: base.html
+File: create_post.html
 Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
 Description: This is the create post form for the mini_insta app.
 -->
