--- a/mini_insta/templates/mini_insta/update_post_form.html
+++ b/mini_insta/templates/mini_insta/update_post_form.html
@@ -1,17 +1,21 @@
-
+<!-- 
+File: update_post_form.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the update post form template for the mini_insta app.
+-->
 
 
 {% extends 'mini_insta/base.html' %}
 
 {% block content %}
 
-    <!-- Header for Create Post -->
+    <!-- Header for Update Post -->
     <div class="form-header">
         <h1>Update a post for {{ profile.username }}</h1>
         <img src="{{ profile.profile_image_url }}" alt="images of the chiikawa characters">
     </div>
 
-    <!-- Form for Creating Post with Image URL field and submission buttons -->
+    <!-- Form for Updating Post with caption field and submission buttons -->
     <form method="post">
         {% csrf_token %}
 
@@ -20,7 +24,7 @@
         </table>
 
         <input type="submit" value="Update Post">
-        <a href="{% url 'show_profile' object.profile.pk %}">
+        <a href="{% url 'show_profile' profile.pk %}">
             <input type="button" value="Back">
         </a>
 
