--- a/mini_insta/templates/mini_insta/update_profile_form.html
+++ b/mini_insta/templates/mini_insta/update_profile_form.html
@@ -1,5 +1,8 @@
-
-
+<!-- 
+File: update_profile_form.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This is the update profile form template for the mini_insta app.
+-->
 
 {% extends 'mini_insta/base.html' %}
 
