just finished adding the follower and following class

--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -10,7 +10,7 @@ Description: This is the base template for the mini_insta app.
 
     <head>
         <title>Chiikawa Mini Instagram</title>
-        <link rel="stylesheet" href="{% static 'styles-mini-insta.css' %}">
+        <link rel="stylesheet" href="{% static 'styles-mini-insta-updated.css' %}">
     </head>
 
     
