--- a/mini_insta/templates/mini_insta/show_post.html
+++ b/mini_insta/templates/mini_insta/show_post.html
@@ -46,9 +46,23 @@ Description: This is the singular post template for the mini_insta app.
             </form>
         </div>
 
-    </post>
+        <hr>
 
-        
+        <!-- Comment section -->
+        <h3>Comments</h3>
+        {% if post.get_all_comments %}
+            <ul class="comments-list">
+                {% for comment in post.get_all_comments %}
+                    <li class="comment">
+                        <strong>@{{ comment.profile.username }}</strong>: {{ comment.text }}
+                    </li>
+                {% endfor %}
+            </ul>
+        {% else %}
+            <p>No comments yet. Be the first to comment!</p>
+        {% endif %}
+
+    </post>
 
 </main>
 
