--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -24,6 +24,11 @@ Description: This is the base template for the mini_insta app.
         <nav>
             <ul>
                 <li><a href="{% url 'show_all_profiles' %}">Show All</a></li>
+                {% if profile %}
+                    <li><a href="{% url 'show_feed' profile.pk %}">Home Feed</a></li>
+                    <li><a href="{% url 'create_post' profile.pk %}">Create Post</a></li>
+                    <li><a href="{% url 'show_profile' profile.pk %}">My Profile</a></li>
+                {% endif %}
             </ul>
         </nav>
         
@@ -40,11 +45,27 @@ Description: This is the base template for the mini_insta app.
          something to create a new post if in a profile-->
         <footer>
             <p>&#169 Ruby Chen 2025. All rights reserved</p>
+
+            <!-- Show All Profiles  -->
             <p><a href="{% url 'show_all_profiles' %}">All Profiles</a></p>
             {% if profile %}
+
+            <!-- Profile home feed -->
+            <p>
+                <a href="{% url 'show_feed' profile.pk %}">Home Feed</a>
+            </p>
+
+            <!-- Create Post  -->
             <p>
                 <a href="{% url 'create_post' profile.pk %}">Create Post</a>
             </p>
+            
+            <!-- Nav to user Profile  -->
+            <p>
+                <a href="{% url 'show_profile' profile.pk %}">My Profile</a>
+            </p>
+
+
             {% endif %}
         </footer>
     </body>
