--- a/mini_insta/templates/mini_insta/show_followers.html
+++ b/mini_insta/templates/mini_insta/show_followers.html
@@ -1,3 +1,9 @@
+<!-- 
+File: show_followers.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This displays the followers for a specific profile 
+-->
+
 {% extends 'mini_insta/base.html' %}
 
 {% block content %}
