--- a/mini_insta/templates/mini_insta/show_following.html
+++ b/mini_insta/templates/mini_insta/show_following.html
@@ -1,3 +1,11 @@
+<!-- 
+File: show_followers.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: This displays the profiles a specfic user is following
+-->
+
+
+
 {% extends 'mini_insta/base.html' %}
 
 {% block content %}
