--- a/static/styles-mini-insta-updated.css
+++ b/static/styles-mini-insta-updated.css
@@ -92,7 +92,7 @@ footer{
     padding-bottom: 3%;
     color: #888888;
     display: flex;
-    flex-direction:row;
+    flex-direction:column;
     align-items: center;
     text-align: center;
 }
