--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -28,6 +28,7 @@ Description: This is the base template for the mini_insta app.
                     <li><a href="{% url 'show_feed' profile.pk %}">Home Feed</a></li>
                     <li><a href="{% url 'create_post' profile.pk %}">Create Post</a></li>
                     <li><a href="{% url 'show_profile' profile.pk %}">My Profile</a></li>
+                    <li><a href="{% url 'search' profile.pk %}">Search</a></li>
                 {% endif %}
             </ul>
         </nav>
