--- a/mini_insta/templates/mini_insta/search_results.html
+++ b/mini_insta/templates/mini_insta/search_results.html
@@ -15,7 +15,7 @@ search result functionality
 
     <!-- Back link to Search functionality -->
     <p>
-        <a href="{% url 'search' profile.pk %}">Back to Search</a>
+        <a href="{% url 'search' %}">Back to Search</a>
     </p>
 
     <!-- Profiles section -- Dislay any profiles that match the search option-->
