--- a/mini_insta/templates/mini_insta/update_post_form.html
+++ b/mini_insta/templates/mini_insta/update_post_form.html
@@ -24,7 +24,7 @@ Description: This is the update post form template for the mini_insta app.
         </table>
 
         <input type="submit" value="Update Post">
-        <a href="{% url 'show_profile' profile.pk %}">
+        <a href="{% url 'show_user_profile' %}">
             <input type="button" value="Back">
         </a>
 
