implemented the last task and debugged/tested

--- a/mini_insta/templates/mini_insta/base.html
+++ b/mini_insta/templates/mini_insta/base.html
@@ -45,6 +45,7 @@ Description: This is the base template for the mini_insta app.
                 <!-- URLs for users who are not logged in -->
                 {% else %}
                 <li><a href="{% url 'login' %}">Log in</a></li>
+                <li><a href="{% url 'create_profile' %}">Register</a></li>
 
                 {% endif %}
             </ul>
