--- a/mini_insta/templates/mini_insta/create_profile_form.html
+++ b/mini_insta/templates/mini_insta/create_profile_form.html
@@ -1,4 +1,9 @@
-
+<!-- 
+File: create_profile_form.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: this template is the create profile form for the mini_insta app.
+It displays a form for registering/creating a new user profile.
+-->
 
 {% extends 'mini_insta/base.html' %}
  
@@ -6,15 +11,20 @@
 {% block content %}
 <h1>Create A Profile</h1>
 
+<!-- This form handles the creation of both a Django User account
+and a Profile model instance. -->
+
 <form method="post" style="display: inline;">
     
     {% csrf_token %}
 
-    <h3>User Account</h3>
+    <!-- Displays the Django User form fields -->
+    <h3>Make a User Account</h3>
     {{ user_form.as_p }}
 
     <br>
 
+    <!-- Display the form fields for a Profile model-->
     <h3>Profile Information</h3>
     {{ form.as_p }}
 
