--- a/mini_insta/templates/mini_insta/logged_out.html
+++ b/mini_insta/templates/mini_insta/logged_out.html
@@ -1,3 +1,9 @@
+<!-- 
+File: logged_out.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: this template is the logout page for the mini_insta app.
+It displays a logout message and the ability to log back in or go back to all profiles.
+-->
 
 {% extends 'mini_insta/base.html' %}
 
