--- a/mini_insta/templates/mini_insta/show_post.html
+++ b/mini_insta/templates/mini_insta/show_post.html
@@ -48,11 +48,16 @@ Description: This is the singular post template for the mini_insta app.
 
             <!-- If it's another autheticated user they'll see the like and unlike button instead -->
             {% if request.user.is_authenticated and post.profile.user != request.user %}
+
+                <!-- check if the post is liked by the current user 
+                 if it is then show the "Unlike" button -->
+
                 {% if is_liked %}
                     <form action="{% url 'delete_like' post.pk %}" method="post" style="display:inline;">
                         {% csrf_token %}
                         <button type="submit">Unlike</button>
                     </form>
+                <!-- else show the "Like" button -->
                 {% else %}
                     <form action="{% url 'like' post.pk %}" method="post" style="display:inline;">
                         {% csrf_token %}
