--- a/voter_analytics/templates/voter_analytics/graphs.html
+++ b/voter_analytics/templates/voter_analytics/graphs.html
@@ -1,3 +1,10 @@
+<!-- 
+File: voter_analytics/templates/voter_analytics/graphs.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: this template displays the graphs for the voter analytics app.
+It includes the filtering form and the various graphs based on the filtered data.
+-->
+
 {% extends 'voter_analytics/base.html' %}
 {% block content %}
 
