--- a/voter_analytics/templates/voter_analytics/filtering_form.html
+++ b/voter_analytics/templates/voter_analytics/filtering_form.html
@@ -1,4 +1,13 @@
+<!-- 
+File: voter_analytics/templates/voter_analytics/filtering_form.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: this template is the filtering form for the voter analytics app.
+Lays out all the fields and options for filtering the voter list and graphs.
+-->
+
+
 <!-- voter_analytics/templates/voter_analytics/filter_form.html -->
+
 <h3>Voter Filter Form</h3>
 
 <table>
