--- a/voter_analytics/templates/voter_analytics/voters.html
+++ b/voter_analytics/templates/voter_analytics/voters.html
@@ -1,3 +1,10 @@
+<!-- 
+File: voter_analytics/templates/voter_analytics/voters.html
+Author: Ruby Chen (rc071404@bu.edu), 7/14/2004
+Description: this template displays the list of voters for the voter analytics app.
+It includes the filtering form and the various voters based on the filtered data.
+-->
+
 <!-- templates/voter_analytics/voters.html -->
 {% extends 'voter_analytics/base.html' %}
 
@@ -84,6 +91,7 @@
 
             </tr>
             {% empty %}
+            <!-- If no voters match the filters -->
             <tr>
                 <td>No voters found matching your filters.</td>
             </tr>
