--- a/staticfiles/styles.css
+++ b/staticfiles/styles.css
@@ -1,171 +1,228 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+body {
+    background-color: #fff;
+    color: slategray;
+    font-family: arial;
 }
+
+h1,h2,h3,h4,h5{
+    font-weight: normal;
+    background:aliceblue;
+    margin: 0;
+}
+
+a, a:visited {
+    color: slategrey;
+    text-decoration: none;
+}
+
+a:hover {
+    color: darkblue;
+    text-decoration: none;
+    background-color: white;
+    /* font-weight: bold; */
+}
+
+body {
+    max-width: 960px;
+    margin: 20px auto;
+    padding: 20px auto;
+}
+
+header {
+    width: 100%;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background:aliceblue;
+    position: fixed;
+    top: 0px;
+    z-index: 999;
+    /* padding-right: 50px auto; */
+}
+
+footer {
+    width: 100%;
+    background:aliceblue;
+    position: fixed;
+    bottom: 0px;
+}
+
+
+.wrapper {              /* centering and margin around whole wrapper element */
+    border: 2px solid;
+    max-width: 100%;
+    position: relative;
+    top: 50px;
+    scroll-padding-top: 100px;
+    /* scroll-padding-bottom: 100px; */
+    padding-bottom: 50px;
+    
+    /* top:100px; */
+    /* bottom: 100px; */
+}
+
+
+div.wrapper h1 {
+    text-align: center;
+    color: darkblue;
+    margin: 10px auto;
+    font-size: 2.4 em; 
+
+}
+
+div.wrapper h2 {
+    text-align: left;
+    color: darkblue;
+    margin: 5px auto;
+    font-size: 2 em; 
+}
+
+
+section {
+    border: 2px solid darkblue;    /* border around each event */
+    position: relative;
+    padding-bottom: 4px;
+}
+
 
 nav {
-    height: 100vh;
-    width: 15vw;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    overflow-x: hidden;
-    padding-top: 5%;
-    padding-left: 2%;
-    border-right: 1px solid #d4d4d4;
-    background-color: #FFF4F4;
-    font-size: calc(2px + 1vw);
+    justify-self: end;
+    background: none;
+    color: darkblue;
+    /* border: 1px solid; */
 }
 
-nav ul{
-    list-style: none;
-    display: flex;
-    flex-direction: column;
+nav li {
+    display: inline-block;
+    margin-left: 20px;
 }
 
-nav li{
-    margin: 10% 0;
+nav button {
+    background: none;
+    color: slategray;
+    font-family: Arial;
+    cursor: pointer; 
+    border: 0;
+    font-size: 1.2 em;
 }
 
-nav a{
-    text-decoration: none;
-    color: black;
+.mc-table {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
 }
 
-body{
-    margin: 5% 0 0 18%;
-    font-family: poppins, sans-serif;
-    display: flex;
-    background-color: #FFF4F4;
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-    gap: 3%;
-    font-size: calc(3px + 1vw);
+
+.mc-table-head {
+    border: 1px dashed darkblue;    /*border around each row */
+    display: table-row;
+    font-size: 1.2em;
 }
 
-h1{
-    font-size: calc(10px + 2vw);
-    color: #BD385E;
+.mc-table-head .detail {
+    display: table-cell;
+    color:darkblue;
+    font-weight: bold;
+    background-color: white;
+    padding: 5px;
+    position: relative;
+   
 }
 
-h3{
-    font-size: calc(7px + 1vw);
-    color: #BD385E;
+.mc-table-row  {
+    display: table-row;
+    border: 1px dashed darkblue;    /*border around each row */
+    background-color: white;
 }
 
-body img{
-    margin: 3% 0;
+
+.mc-table-row .detail {
+    color:darkblue;
+    display: table-cell;
+   
+    padding: 5px;
 }
 
-#quote_text{
-    align-items: center;
-    text-align: center;
-    width: 60vw;
+.mc-table-row .detail img {
+    max-height: 75px;
+    align-content: right;
 }
 
-#main_quote{
-    font-size: calc(6px + 1vw);
-    font-weight: 500;
-    color: #BD385E;;
+/* must have no space before :hover */
+.mc-table-row:hover {
+    background-color: aliceblue;    
+    border: 1px solid;
 }
 
-img{
-    border-radius: 20px;
-    height: auto;
-    width: 60vw;
+.site-form {
+    margin-top: 10px;
+    /* border: 2px solid darkblue; */
+    padding: 10px;
 }
 
-.button-container{
-    margin: 3vh 0;
+/* style the forms with class site-form */
+.site-form input, .site-form textarea, .site-form select {
+    display: block;
+    margin: 5px 0 0 0;
+    padding: 5px;
 }
 
-.button-container button {
-    background-color: #8BC48B; 
-    color: white;
-    font-size: calc(5px + 1vw);
-    font-weight: 600;
-    padding: 2vh 3vw;
-    border: solid #489452 1px;
-    border-radius: 10px;
+/* style the submit button ; didn't quite work?? */
+.site-form input [type="submit"] {
+    background: slategray;
+    border: 0;
+    color: fff;
+    font-size: 1.2em;
+    border-radius: 4px;
+    margin: 5px 0;
 }
 
-footer{
-    font-size: calc(2px + 1vw);
-    color: #888888;
-    padding: 2% 0;
+
+/* style the help text in the forms */
+.helptext, .helptext.ul {
+    margin-top: 0 auto;
+    bottom: 20px;
+    color: #bbb;
+    font-size: 0.9em;
 }
 
-.about_section{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+/* style the error list in the forms validation */
+.errorlist li {
+    padding: 10px;
+    list-style-type: none;
+    border: 1px solid crimson;
+    color: crimson;
+    margin: 10px 0;
 }
 
-.about_section h1{
-    margin-bottom: 2%;
+
+.errorlist {
+    padding: 0px;
 }
 
-.about_section p{
-    font-size: calc(4px + 1vw);
-    width: 75vw;
-    margin-bottom: 5%;
-}
 
-.about_section h3{
-    margin-bottom: 2%;
-}
+/* responsive styles when width is less than 1400px */
+@media screen and (max-width: 560px) {
+    header h1 {
+        size: 0.8em;
+    }
 
-.show_all_section{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.show_all_section h1{
-    margin-bottom: 5%;
-}
-
-.show_all_section h3{
-    margin: 5% 0 2% 0;
-}
-
-.show_all_section p{
-    font-size: calc(4px + 1vw);
-    width: 75vw;
-    margin-bottom: 5%;
-}
-
-.all_images{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 3%;
-}
-
-.all_quotes {
-    margin: auto;
-    border: 1px solid #BD385E; 
-    border-radius: 20px;
-    padding: 5%;
-    width: 60vw;
-}
-
-.all_quotes ul {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-
-.all_quotes li {
-    margin: 2% 0;
-    font-size: calc(4px + 1vw);
+    nav li {
+        display: block;
+        margin-left: 0px;
+        font-size: 14px;
+        width: 100%;
+    }
+    
+    nav button {
+        background: none;
+        color: slategray;
+        font-family: Arial;
+        cursor: pointer; 
+        border: 0;
+        font-size: 20px;
+    }
+    /* on mobile, display image as max 95% of available width*/
+    img {
+        max-width: 95%;
+    }
 }
