--- a/dadjokes/templates/dadjokes/base.html
+++ b/dadjokes/templates/dadjokes/base.html
@@ -1,3 +1,11 @@
+<!-- 
+File: dadjokes/templates/dadjokes/base.html
+Author: Ruby Chen (rc071404@bu.edu)
+Date: 11/16/2025
+Description: Base template for the dadjokes application. 
+-->
+
+
 {% load static %}
 <html>
 <head>
@@ -9,6 +17,8 @@
 
 <header>
     <h1>Dad Jokes with Usagi</h1>
+
+    <!-- Nav bar with navigations to random, all jokes, and all pictures -->
     <nav>
         <ul>
             <li><a href="{% url 'random' %}">Random</a></li>
