--- a/dadjokes/templates/dadjokes/picture_detail.html
+++ b/dadjokes/templates/dadjokes/picture_detail.html
@@ -1,3 +1,11 @@
+<!-- 
+File: dadjokes/templates/dadjokes/picture_detail.html
+Author: Ruby Chen (rc071404@bu.edu)
+Date: 11/16/2025
+Description: Displays a single picture entry, including the image URL, 
+contributor name, and timestamp. 
+-->
+
 {% extends 'dadjokes/base.html' %}
 
 {% block content %}
@@ -5,6 +13,8 @@
 <h3>Usagi Picture #{{ picture.pk }}</h3>
 
 <main class="grid-container">
+
+    <!-- Display the specific picture instance  -->
 
     <article>
         <img src="{{ picture.image_url }}" alt="Usagi from Chiikawa" width="400">
@@ -14,6 +24,7 @@
 
 </main>
 
-<a href="{% url 'pictures' %}">Back to All Pictures</a>
+<!-- link back to all pictures page  -->
+<a class="button" href="{% url 'pictures' %}">Back to All Pictures</a>
 
 {% endblock %}
