trying to get my map to show up on cspeople

--- a/terrier_study/templates/terrier_study/home.html
+++ b/terrier_study/templates/terrier_study/home.html
@@ -22,9 +22,11 @@
 
 </div>
 
-<!-- GOOGLE MAPS INIT SCRIPT -->
-<script async
-    src="https://maps.googleapis.com/maps/api/js?key={{ google_key }}&callback=initMap">
+<!-- google map init script used this as reference:  -->
+<!-- https://apidog.com/blog/how-to-integrate-google-http-apidog-com-blog-how-to-integrate-google-maps-api-maps-api/-->
+
+<script
+    src="https://maps.googleapis.com/maps/api/js?key={{ google_key }}&callback=initMap" async defer>
 </script>
 
 <script>
